# search-helix-platform

./: .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  fix_layout.bat  package-lock.json  package.json  seed_backend_docs.mjs  seed_frontend.mjs
.github/workflows/: ci.yml
backend/: Cargo.toml  package.json
backend/src/: api.rs  app.js  config.rs  diagnostics.rs  error.rs  freshness.rs  index.js  indexing.rs  lib.rs  main.rs  models.rs  query.rs  ranking.rs  runtime.rs  seeder.rs
backend/src/api/: state.rs
backend/src/middleware/: errorHandler.js  notFound.js
backend/src/routes/: health.js  index.js  search.js
backend/src/scripts/: seed.js
backend/src/services/: config.js  index.js  search.js
backend/src/utils/: parser.js  scoring.js
docs/: api-reference.md  architecture.md  benchmarks.md  contributing.md  deployment.md  relevance-evaluation.md  roadmap.md  tradeoffs.md
frontend/: package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
