[package]
name = "search-helix"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
authors = ["Search Helix Contributors"]
description = "Plateforme d'infrastructure de recherche full-text et hybride pour l'indexation, le ranking et le diagnostic de pertinence."
license = "MIT"
keywords = ["search", "fulltext", "ranking", "information-retrieval"]

[dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8", features = ["json", "macros", "ws", "tracing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tantivy = "0.22"
rmp-serde = "1.3"
regex = "1.11"
unicode-normalization = "0.1"
levenshtein = "1.0"
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "grpc"] }
tracing-opentelemetry = "0.28"
metrics = "0.24"
config = "0.14"
dotenvy = "0.15"
pdf-extract = "0.9"
url = "2.5"
walkdir = "2.5"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "search-helix"
path = "src/main.rs"

[[bin]]
name = "seeder"
path = "src/seeder.rs"
